[package]
name = "GhostGuard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ethers = { version = "2.0.14", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
