[package]
name = "ghostguard"
version = "0.1.0"
edition = "2021"
description = "Detect ghost fills on Polymarket CLOB"
license = "MIT"
repository = "https://github.com/libaice/GhostGuard"
homepage = "https://github.com/libaice/GhostGuard"
keywords = ["polymarket", "ghost-fill", "clob", "polygon", "trading"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
name = "ghostguard"
path = "src/lib.rs"

[[bin]]
name = "ghostguard"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
ethers = { version = "2.0", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
