[package]
name = "ghostguard"
version = "0.2.0"
edition = "2021"
description = "Detect ghost fills on Polymarket CLOB"
license = "MIT"
repository = "https://github.com/OrderBookTrade/GhostGuard"
homepage = "https://github.com/OrderBookTrade/GhostGuard"
keywords = ["polymarket", "ghost-fill", "clob", "polygon", "trading"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
name = "ghostguard"
path = "src/lib.rs"

[[bin]]
name = "ghostguard"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
